# AGENTIC

./: END_TO_END_WALKTHROUGH.md  LICENSE  README.md  SUBAGENT_SETUP_AND_TESTS.md  SUBAGENT_UI_TEST_PLAN.md  SUBAGENT_WORKFLOW_EXPLAINED.md  SUBAGENT_WORKFLOW_PLAN.md  SUBAGENT_WORKFLOW_QA.md  cypherx-design-preview.html  status.md
CoreProjects/cypherx-a1/: .env.example  CLAUDE.md  Dockerfile  Integrated-plan.md  README.md  base-idea.md  bkg-kg-core-build-plan.md  openapi.yaml  pyproject.toml
CoreProjects/cypherx-a1/docs/: 00-overview-and-product-vision.md  01-architecture-decision-records.md  02-sharedcore-integration-boundary.md  03-data-model-and-schema.md  04-rag-kb-design.md  05-ingestion-and-connector-spi.md  06-knowledge-extraction-engine.md  07-hybrid-retrieval-and-reasoning.md  08-copilot-and-public-api.md  09-mcp-server-design.md  10-multitenancy-rls-and-security.md  11-eventing-and-outbox.md  12-observability-and-contracts-conformance.md  13-repo-placement-bootstrap-and-deployment.md  14-build-plan-and-phasing.md  15-scalability-and-runbooks.md  16-testing-strategy.md  17-open-questions-and-roadmap.md  README.md  ui-design.md
CoreProjects/cypherx-a1/eval/: README.md  run_eval.py
CoreProjects/cypherx-a1/mcp-eng-memory/: .env.example  Dockerfile  README.md  manifest.json  pyproject.toml
CoreProjects/cypherx-a1/phases/: 00-enhancement-overview-and-priorities.md  01-how-the-kb-is-built-today.md  02-research-verdict-and-rejections.md  README.md  feature-list-near-term-and-future.md  over-engineering-explicitly-avoided.md  phase-A-confidence-weighted-bitemporal-retrieval.md  phase-B-reflection-and-activity-surface.md  phase-C-expertise-intent-and-identity.md  phase-D-optional-causation-and-scale.md  phase-KG-knowledge-graph-accuracy.md
CoreProjects/cypherx-a1/pitch/: CypherX_A1_Hackathon_Pitch.pptx
CoreProjects/cypherx-a1/scripts/: live_graph_demo.py  verify_phase_c.py
CoreProjects/cypherx-a1/tests/: conftest.py  test_api_contracts.py  test_eval_harness.py  test_github_connector.py  test_graph_endpoints.py  test_phase_a.py  test_phase_b.py  test_phase_c.py  test_phase_kg.py  test_rls_cross_tenant.py
Shared Core/guardrails/: .dockerignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
Shared Core/guardrails/eval/: baseline_decisions.json  behavioral.py  golden_set.jsonl  redteam_set.jsonl  regression_gate.py  run_eval.py
Shared Core/guardrails/tests/: _fakedb.py  conftest.py  test_auth_revocation.py  test_canary_leak.py  test_check_api.py  test_check_api_additive.py  test_check_api_b1.py  test_classifier_cascade.py  test_eval_harness.py  test_groundedness.py  test_injection_defense.py  test_live_fail_mode.py  test_matched_redaction.py  test_normalization.py  test_outbox_payloads.py  test_passport_mrz.py  test_pii_context.py  test_pii_presidio.py  test_pipeline.py  test_policy_uuid_validation.py  test_readyz.py  test_redaction.py  test_registry_custom_no_mismatch.py  test_rule_registry.py  test_rules.py  test_safety_fail_closed.py  test_signatures.py  test_trace_request_id.py  test_valkey.py  test_wp07_custom_rules.py  test_wp07_hotpath.py  test_wp07_policies.py  test_wp07_redaction_keys.py  test_wp07_simulation.py  test_wp07_violations.py
Shared Core/llms/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
Shared Core/llms/eval/: README.md  golden_classify.jsonl  golden_rerank.jsonl  run_eval.py
Shared Core/llms/tests/: conftest.py  test_auth_revocation.py  test_auth_unit.py  test_billing_llm_call_id.py  test_bugfix_contract.py  test_chat_mock.py  test_classify.py  test_config_registry.py  test_normalizer.py  test_normalizer_more.py  test_outbox_payloads.py  test_provider_error_mapping.py  test_rerank.py  test_streaming.py  test_tool_emulation.py  test_valkey_readyz.py  test_wp05_chat_core_selfcheck.py  test_wp05_idempotency.py  test_wp05_max_tokens.py  test_wp05_rate_limit.py  test_wp05_read_apis.py  test_wp05_streaming_tool_calls.py  test_wp06_acl.py  test_wp06_body_and_image_caps.py  test_wp06_byok.py  test_wp06_embeddings.py  test_wp06_image_fetch_ssrf.py
Shared Core/memory/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml
Shared Core/memory/eval/: README.md  golden_memories.json  run_eval.py
Shared Core/memory/tests/: _helpers.py  _pg_fakes.py  conftest.py  test_actr.py  test_auth_scopes.py  test_by_id.py  test_consolidation.py  test_contradiction.py  test_dedup_and_idempotency.py  test_embedding_cache.py  test_embeddings.py  test_eval_extensions.py  test_eval_harness.py  test_extraction.py  test_gdpr_wipe.py  test_health_and_outbox.py  test_linking.py  test_mmr.py  test_pg_sql_features.py  test_quota.py  test_scope_visibility.py  test_scoring.py  test_scoring_api.py  test_sessions.py  (+4 more)
Skills/skill-registry/: .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml
Tools/tool-flow-bridge/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
Tools/tool-web-search/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  REPO_ANALYSIS_2026-06-11.md  pyproject.toml
backend-knowledge-graph/: .gitignore  CLAUDE.md  README.md  pyproject.toml
backend-knowledge-graph/docs/: bkg-kg-core-build-plan.md  bkg-research-incremental-code-kg.md  next-phase-plan.md  updated-plan.md
backend-knowledge-graph/tests/: conftest.py  golden_served.json  parity_corpus.py  synthetic.py  test_ai.py  test_ai_llm.py  test_api.py  test_canonical.py  test_canonical_determinism.py  test_cli.py  test_cli_runtime.py  test_daemon.py  test_daemon_mtime.py  test_daemon_persistence.py  test_endpoint_identity.py  test_engine.py  test_fastapi_adapter.py  test_incremental_oracle.py  test_mcp_server.py  test_mount_resolution.py  test_parser.py  test_pipeline_depth.py  test_pipeline_flask.py  test_pipeline_flask_oracle.py  test_pipeline_integration.py  test_pipeline_oracle.py  test_python_unparse.py  test_runtime.py  test_schema_cycles.py  test_served_golden.py  test_service.py  test_store_roundtrip.py
xAgent/ax-1/: .dockerignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
(+1445 files in other folders)
