[project]
name = "bkg"
version = "0.0.0"
description = "Backend Knowledge Graph — a local-first, incrementally-updated, provenance-tracked knowledge graph of a backend codebase, served to AI agents over MCP with no LLM on the query path."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "blake3>=0.4.1",
  "mcp>=1.2",
]

[project.scripts]
bkg = "bkg.cli:main"
bkg-mcp = "bkg.mcp_server:main"

[dependency-groups]
dev = [
  "pytest>=8.2",
  "hypothesis>=6.100",
  "ruff>=0.6",
  "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bkg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_unused_ignores = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["mcp.*"]
ignore_missing_imports = true
