[project]
name = "bkg"
version = "0.0.0"
description = "Backend Knowledge Graph — a local-first, incrementally-updated, provenance-tracked knowledge graph of a backend codebase, served to AI agents over MCP with no LLM on the query path."
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.7",
  "blake3>=0.4.1",
  "mcp>=1.2",
  "watchfiles>=0.21",
  # Universal syntax layer for the replaceable parser (migration). The GRAMMAR version
  # is part of the determinism contract — a bump can change the tree and the digest, so
  # exact versions are pinned in uv.lock and treated as a breaking change.
  "tree-sitter>=0.23",
  "tree-sitter-python>=0.23",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]  # real LLM AiAnalysisProvider (anthropic_complete); the core never imports it
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]  # Backend Intelligence HTTP API; core never imports it

[project.scripts]
bkg = "bkg.cli:main"
bkg-mcp = "bkg.mcp_server:main"
bkg-api = "bkg.api:main"

[dependency-groups]
dev = [
  "pytest>=8.2",
  "hypothesis>=6.100",
  "ruff>=0.6",
  "mypy>=1.11",
  "fastapi>=0.110",   # so the API layer + its tests run in CI
  "uvicorn>=0.29",
  "httpx>=0.27",      # starlette TestClient transport
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bkg"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom evaluates Depends()/Query() in argument
# defaults by design; they are not mutable-default hazards.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.mypy]
python_version = "3.12"
disallow_untyped_defs = true
warn_unused_ignores = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["mcp.*", "watchfiles.*", "anthropic.*", "fastapi.*", "uvicorn.*", "starlette.*", "tree_sitter.*", "tree_sitter_python.*"]
ignore_missing_imports = true
