[project]
name = "cypherx-a1"
version = "0.1.0"
description = "CypherX cypherx-a1 — Autonomous Engineering Memory. Ingests engineering sources into a tenant-scoped knowledge graph + RAG corpus, runs an LLM knowledge-extraction pipeline, and serves a cited hybrid-retrieval copilot + an MCP query surface."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "psycopg[binary,pool]>=3.2",
    "aiokafka>=0.11",
    "pyjwt[crypto]>=2.9",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "redis>=5",
]

[project.optional-dependencies]
# OpenTelemetry OTLP span export (Contract 8). OPT-IN: install this extra AND set
# OTEL_EXPORTER_OTLP_ENDPOINT to export spans. With the extra absent (the default) the
# service still propagates W3C trace context (traceparent + tracestate) on every
# downstream call — only span EXPORT requires these packages, and core.trace degrades to
# a NO-OP when they are missing. Mirrors the xAgent ax-1 convention.
otel = [
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "asgi-lifespan>=2.1",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cypherx_a1"]

# Package the UI-1 console asset into the wheel so /ui works in the Docker image too.
[tool.hatch.build.targets.wheel.force-include]
"src/cypherx_a1/ui/index.html" = "cypherx_a1/ui/index.html"

[tool.ruff]
line-length = 110
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
packages = ["cypherx_a1"]
mypy_path = "src"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
faulthandler_timeout = 60
