[project]
name = "llms-gateway"
version = "0.1.0"
description = "CypherX SharedCore — LLMs Gateway. Unified, provider-normalized /chat/completions with usage metering, auth, and cost."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "anthropic>=0.39",
    "openai>=1.54",
    "psycopg[binary,pool]>=3.2",
    "aiokafka>=0.11",
    "pyjwt[crypto]>=2.9",
    "cryptography>=42",  # BYOK sealed:v1 envelope (AES-256-GCM + HKDF); also a pyjwt[crypto] dep
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "redis>=5",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "asgi-lifespan>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llms_gateway"]

[tool.ruff]
line-length = 110
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.mypy]
python_version = "3.12"
packages = ["llms_gateway"]
mypy_path = "src"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
