[project]
name = "memory-service"
version = "0.1.0"
description = "CypherX SharedCore — Memory service (WP10). Principal-scoped agent memory: store / retrieve / sessions / GDPR wipe, with vector search via the llms-gateway embeddings surface."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "psycopg[binary,pool]>=3.2",
    "aiokafka>=0.11",
    "pyjwt[crypto]>=2.9",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "redis>=5",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "asgi-lifespan>=2.1",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memory_service"]

[tool.ruff]
line-length = 110
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.ruff.lint.isort]
# The test helper module lives in tests/ and is imported as a top-level module (pytest
# prepend import mode); tell isort it is first-party so it groups with our package.
known-first-party = ["memory_service", "_helpers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
