[project]
name = "mcp-eng-memory"
version = "1.0.0"
description = "CypherX mcp-eng-memory — stateless MCP server exposing read-only, cited engineering-memory queries; a thin facade over the cypherx-a1 product API. No DB, no Kafka."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "pyjwt[crypto]>=2.9",
    "structlog>=24.4",
    "prometheus-client>=0.21",
]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "asgi-lifespan>=2.1",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_eng_memory"]

[tool.ruff]
line-length = 110
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
packages = ["mcp_eng_memory"]
mypy_path = "src"
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
faulthandler_timeout = 60
